tests/fixtures/invalid/pow_int_bytes.py
# Cannot call pow() with Int, Bytes
x = pow(1, b"hello")
